prevent overflow from long display names

--- a/src/modules/chat/messages/style.scss
+++ b/src/modules/chat/messages/style.scss
@@ -4,6 +4,9 @@
   align-items: baseline;
 }
 
+.room-component-center {
+  max-width: calc(100% - 400px) !important;
+}
 .user-badge-container {
   align-self: center;
 }
